# GeneKnow

./: .env  .gitattributes  .gitignore  .pre-commit-config.yaml  ADD_MORE_DATASETS.md  BUILD_LINT_TEST_RESULTS.md  EXTERNAL_SSD_SETUP.md  PRD_V2.md  README.md  REMOTE_TESTING_GUIDE.md  SERVER_STARTUP_README.md  accuracy_summary.py  check_remote_sizes.py  clean_index_files.py  cleanup.py  config.yaml  config_data_source.py  dataset_summary.py  docker-compose.yml  extract_by_region.py  extract_by_region_original.py  extract_by_region_precise.py  fastq_integration_guide.md  fastq_to_vcf_pipeline.py  generate_test_fastq.py  genomic_data_privacy_analysis.md  monitor_performance.py  output.txt  package-lock.json  package.json  regions.bed  regions_large.bed  setup_data.py  setup_external_datasets.sh  temp_main_upload.tsx  test_fusion_import.py  test_maf_pipeline.py  test_ml_fusion_fix.py  test_ml_fusion_integration.py  test_pipeline_ml_fusion.py  (+2 more)
backend/python/: Dockerfile.dev  pyproject.toml  requirements-legacy.txt  requirements-py313.txt  requirements.txt  test_ml_compatibility.py
backend/python/genepredict/: __init__.py
backend/python/genepredict/models/: __init__.py  base.py  risk_assessment.py
backend/python/genepredict/processors/: __init__.py  bam_processor.py  fastq_processor.py  vcf_processor.py
backend/rust/: .env  Cargo.toml  tauri.conf.json
backend/rust/src/: config.rs  error.rs  lib.rs  main.rs  plugins.rs
config/: env.example
desktop/: COMPREHENSIVE_TESTING_GUIDE.md  IMPLEMENTATION_SUMMARY.md  QUICK_TEST_GUIDE.md  TESTING_GUIDE.md  test_implementation.sh  test_rust_integration.sh
docs/: ARCHITECTURE.md  ARTIFACT_STORAGE_MANAGEMENT.md  ARTIFACT_STORAGE_SOLUTION.md  CADD_Model_Node_Implementation_Plan.md  CI_CD_Pipeline_Guide.md  COMPLIANCE.md  CURRENT_STATUS.md  DEPLOYMENT_GUIDE.md  DYNAMIC_PORT_SOLUTION.md  Dashboard_Model_Performance_Tab_Implementation_Plan.md  GITHUB_ACTIONS_COST_OPTIMIZATION.md  GITHUB_PRO_UPGRADE_GUIDE.md  GUNICORN_DEPLOYMENT.md  IMPLEMENTATION_STATUS.md  LFS_AND_RELEASES.md  MACOS_DMG_RESOURCES_ISSUE.md  MACOS_INSTALL_GUIDE.md  MACOS_ZIP_INSTALLATION.md  ONBOARDING.md  Phase1_Foundation_Tauri_Setup_Plan.md  Phase1_Step2_Rust_Python_Wiring_Plan.md  Phase1_Step3_Plugin_Scaffolding_Plan.md  RELEASE_PIPELINE_GUIDE.md  RELEASE_TRIGGER_GUIDE.md  SIZE_OPTIMIZATION_GUIDE.md  TCGA_INTEGRATION.md  VERSIONING_GUIDELINES.md  backend_implementation_guide_clinical_view.md  backend_implementation_summary.md  clinical_view_data_requirements.md  file_structure.md  gene_significance_analysis_explanation.md  phase1_foundation_implementation_plan.md  survival_analysis_implementation_plan.md
documentation/: GenePredict-Concept.markdown  Literature_Gap_Mapper_Idea.md  Parallel-Genomic-Plan.md  Report-Generation.md  SHAP-implementation-plan.md  gene_know_langgraph.md
download_website/: .gitignore  README.md  _config.yml  eslint.config.js  index.html  package-lock.json  package.json  privacy.html  terms.html
frontend/: Dockerfile.dev  package-lock.json  package.json  tailwind.config.js
geneknow_pipeline/: API_DOCUMENTATION.md  CADD_TESTING_GUIDE.md  CADD_TEST_SUMMARY.md  DATABASE_SETUP.md  ML_FUSION_README.md  PARALLEL_EXECUTION_FINAL_STATUS.md  PARALLEL_EXECUTION_FIXES_FINAL.md  PARALLEL_EXECUTION_FIX_SUMMARY.md  PRESENTATION_SCRIPT.md  PRS_IMPLEMENTATION_SUMMARY.md  README.md  REPRODUCIBILITY_SOLUTION.md  SHAP_VALIDATOR_SUMMARY.md  TAURI_INTEGRATION_GUIDE.md  __init__.py  api_server.py  best_fusion_model_real_data.pkl  clinvar_annotations.db  create_all_fusion_models.py  create_population_database.py  create_risk_models.py  create_simple_fusion_model.py  create_tcga_database.py  create_test_reference.py  create_test_vcf.py  debug_tcga_cohort.py  demo_pathway_burden.py  demo_prs_features.py  detect_data_leakage.py  download_1000g_healthy_sample.py  download_cancer_mutations.py  download_cancer_vcf.py  enhanced_api_server.py  (+80 more)
(+250 files in other folders)
