[package]
name = "genepredict"
version = "0.1.0"
description = "GenePredict - AI for Genomic Risk Assessment"
authors = ["GenePredict Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "genepredict_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri dependencies
tauri = { version = "2", features = ["shell-open"] }
tauri-plugin-opener = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Python interop
pyo3 = { version = "0.20", features = ["auto-initialize"] }

# File system operations
walkdir = "2"
tempfile = "3"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Configuration
config = "0.14"

# Plugin system
libloading = "0.8"

# Genomic data processing (placeholder for future)
# Will add bioinformatics libraries as needed

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"

